Fix spacing of About content internal links

--- a/src/routes/About/components/About.scss
+++ b/src/routes/About/components/About.scss
@@ -2,12 +2,12 @@
 
 // ABOUT PAGE CONTAINER
 .aboutContainer {
-  margin: 50px 20px;
+  margin: 0px 20px;
 }
 
 // SIDEBAR STYLES
 .navSidebarContainer {
-  display: block;
+  display: inline-block;
   margin-bottom: 50px;
   width: 100%;
 }
